--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/ico" href="/public/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
@@ -12,6 +12,6 @@
   <body class="bg-[#222222]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="src/components/fondo/Fondo.js"></script>
+    <script src="/src/components/fondo/Fondo.js"></script>
   </body>
 </html>
