add fondo animation and update file paths for assets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body class="bg-[#222222]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/src/components/fondo/Fondo.js"></script>
+    <script src="/fondo/Fondo.js"></script>
   </body>
 </html>
